@@ -21,8 +21,6 @@ import org.openrewrite.table.DistinctGitProvenance;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
-import java.util.Collections;
-
 import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.marker.GitProvenance.AutoCRLF.False;
@@ -42,9 +40,9 @@ class FindGitProvenanceTest implements RewriteTest {
         rewriteRun(
           spec -> spec.dataTable(DistinctGitProvenance.Row.class, rows -> {
               assertThat(rows).hasSize(1);
-              assertThat(rows.get(0).getBranch()).isEqualTo("main");
-              assertThat(rows.get(0).getChangeset()).isEqualTo("1234567");
-              assertThat(rows.get(0).getOrigin()).isEqualTo("https://github.com/openrewrite/rewrite");
+              assertThat(rows.getFirst().getBranch()).isEqualTo("main");
+              assertThat(rows.getFirst().getChangeset()).isEqualTo("1234567");
+              assertThat(rows.getFirst().getOrigin()).isEqualTo("https://github.com/openrewrite/rewrite");
           }),
           text(
             "Hello, World!",
