@@ -21,7 +21,6 @@ import org.openrewrite.text.PlainTextParser;
 import org.openrewrite.tree.ParseError;
 import org.openrewrite.tree.ParsingExecutionContextView;
 
-import java.io.ByteArrayInputStream;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
@@ -80,9 +79,9 @@ class ParserTest implements RewriteTest {
            line 2
           """;
 
-        Parser.Input input1 = new Parser.Input(path, () -> new ByteArrayInputStream(before.getBytes()));
-        Parser.Input input2 = new Parser.Input(path, () -> new ByteArrayInputStream(after.getBytes()));
-        SourceFile s1 = parser.parse(input1.getSource(ctx).readFully()).toList().get(0);
+        Parser.Input input1 = Parser.Input.fromString(path, before);
+        Parser.Input input2 = Parser.Input.fromString(path, after);
+        SourceFile s1 = parser.parse(input1.getSource(ctx).readFully()).toList().getFirst();
         SourceFile out = parser.requirePrintEqualsInput(s1, input2, null, ctx);
         assertThat(out).isInstanceOf(ParseError.class);
         ParseExceptionResult parseExceptionResult = out.getMarkers().findFirst(ParseExceptionResult.class).get();
