@@ -24,20 +24,20 @@ import static org.assertj.core.api.Assertions.assertThat;
 class NullUtilsTest {
 
     @Test
-    void testPackageNonNullDefault() {
+    void packageNonNullDefault() {
         var results = NullUtils.findNonNullFields(DefaultNonNullTest.class);
         assertThat(results).hasSize(4);
-        assertThat(results.get(0).getName()).isEqualTo("aCoolNonNullName");
+        assertThat(results.getFirst().getName()).isEqualTo("aCoolNonNullName");
         assertThat(results.get(1).getName()).isEqualTo("beCoolNonNullName");
         assertThat(results.get(2).getName()).isEqualTo("coolNonNullName");
         assertThat(results.get(3).getName()).isEqualTo("yourCoolNonNullName");
     }
 
     @Test
-    void testNonNulls() {
+    void nonNulls() {
         var results = NullUtils.findNonNullFields(NonNullTest.class);
         assertThat(results).hasSize(4);
-        assertThat(results.get(0).getName()).isEqualTo("aCoolNonNullName");
+        assertThat(results.getFirst().getName()).isEqualTo("aCoolNonNullName");
         assertThat(results.get(1).getName()).isEqualTo("beCoolNonNullName");
         assertThat(results.get(2).getName()).isEqualTo("coolNonNullName");
         assertThat(results.get(3).getName()).isEqualTo("yourCoolNonNullName");
