@@ -17,8 +17,13 @@ package org.openrewrite.java;
 
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.Test;
-import org.openrewrite.Example;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.openrewrite.DocumentExample;
+import org.openrewrite.ExecutionContext;
 import org.openrewrite.Issue;
+import org.openrewrite.Tree;
+import org.openrewrite.Validated;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.java.tree.JavaType;
 import org.openrewrite.java.tree.Statement;
@@ -29,6 +34,7 @@ import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.java.Assertions.java;
+import static org.openrewrite.test.RewriteTest.toRecipe;
 
 class ChangeMethodNameTest implements RewriteTest {
     @Language("java")
@@ -42,6 +48,33 @@ class ChangeMethodNameTest implements RewriteTest {
          public static void static2(String s) {}
       }
       """;
+
+    @DocumentExample
+    @Test
+    void changeMethodNameForMethodWithSingleArg() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeMethodName("com.abc.B singleArg(String)", "bar", null, null)),
+          java(b, SourceSpec::skip),
+          java(
+            """
+              package com.abc;
+              class A {
+                 public void test() {
+                     new B().singleArg("boo");
+                 }
+              }
+              """,
+            """
+              package com.abc;
+              class A {
+                 public void test() {
+                     new B().bar("boo");
+                 }
+              }
+              """
+          )
+        );
+    }
 
     @SuppressWarnings({"ConstantConditions", "RedundantOperationOnEmptyContainer"})
     @Issue("https://github.com/openrewrite/rewrite/issues/605")
@@ -80,15 +113,47 @@ class ChangeMethodNameTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu -> {
-                J.MethodDeclaration testMethodDecl = (J.MethodDeclaration) cu.getClasses().get(0).getBody().getStatements().get(0);
+                J.MethodDeclaration testMethodDecl = (J.MethodDeclaration) cu.getClasses().getFirst().getBody().getStatements().getFirst();
                 List<Statement> statements = testMethodDecl.getBody().getStatements();
-                J.MethodInvocation barInvocation = (J.MethodInvocation) statements.get(0);
+                J.MethodInvocation barInvocation = (J.MethodInvocation) statements.getFirst();
                 assertThat(barInvocation.getName().getSimpleName()).isEqualTo("bar");
                 assertThat(barInvocation.getMethodType().getName()).isEqualTo("bar");
-                J.MemberReference barReference = (J.MemberReference) ((J.MethodInvocation) statements.get(1)).getArguments().get(0);
+                J.MemberReference barReference = (J.MemberReference) ((J.MethodInvocation) statements.get(1)).getArguments().getFirst();
                 JavaType.Method barRefType = barReference.getMethodType();
                 assertThat(barRefType.getName()).isEqualTo("bar");
             })
+          )
+        );
+    }
+
+    @Test
+    void changeMethodNameForOverriddenMethodAnonymousClass() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeMethodName("com.abc.B singleArg(String)", "bar", true, null)),
+          java(b, SourceSpec::skip),
+          java(
+            """
+              package com.abc;
+              class A {
+                   public void test() {
+                       new B() {
+                           @Override
+                           public void singleArg(String s) {}
+                       };
+                   }
+              }
+              """,
+            """
+              package com.abc;
+              class A {
+                   public void test() {
+                       new B() {
+                           @Override
+                           public void bar(String s) {}
+                       };
+                   }
+              }
+              """
           )
         );
     }
@@ -151,33 +216,6 @@ class ChangeMethodNameTest implements RewriteTest {
                       new B().bar("boo");
                       new java.util.ArrayList<String>().forEach(new B()::bar);
                   }
-              }
-              """
-          )
-        );
-    }
-
-    @Example
-    @Test
-    void changeMethodNameForMethodWithSingleArg() {
-        rewriteRun(
-          spec -> spec.recipe(new ChangeMethodName("com.abc.B singleArg(String)", "bar", null, null)),
-          java(b, SourceSpec::skip),
-          java(
-            """
-              package com.abc;
-              class A {
-                 public void test() {
-                     new B().singleArg("boo");
-                 }
-              }
-              """,
-            """
-              package com.abc;
-              class A {
-                 public void test() {
-                     new B().bar("boo");
-                 }
               }
               """
           )
@@ -363,5 +401,95 @@ class ChangeMethodNameTest implements RewriteTest {
               """
           )
         );
+    }
+
+    @Test
+    void fullyQualifiedStaticMemberReference() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeMethodName("com.abc.B static1(String)", "static2", null, null)),
+          java(b, SourceSpec::skip),
+          java(
+            """
+              package com.abc;
+              class A {
+                 public void test() {
+                     com.abc.B.static1("boo");
+                 }
+              }
+              """,
+            """
+              package com.abc;
+              class A {
+                 public void test() {
+                     com.abc.B.static2("boo");
+                 }
+              }
+              """
+          )
+        );
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"123", "  ", "\t", "this", "class", "null", "true"})
+    void ignoreInvalidMethodNamesWhenCalledDownstream(String newMethodName) {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J visit(Tree tree, ExecutionContext ctx) {
+                  return (J) new ChangeMethodName("com.abc.B static1(String)", newMethodName, null, null).getVisitor().visitNonNull(tree, ctx);
+              }
+          })),
+          java(b, SourceSpec::skip),
+          java(
+            """
+              package com.abc;
+              
+              import java.util.ArrayList;
+              
+              class A {
+                 public void test() {
+                     com.abc.B.static1("boo");
+                     new java.util.ArrayList<String>().forEach(B::static1);
+                 }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void validation() {
+        Validated<Object> validObject = new ChangeMethodName("a.Clazz method(..)", "method2", null, null).validate();
+        assertThat(validObject.isValid()).isTrue();
+    }
+
+    @Test
+    void validateReservedKeyword() {
+        Validated<Object> reservedKeyword = new ChangeMethodName("a.Clazz method(..)", "this", null, null).validate();
+        assertThat(reservedKeyword.isValid()).isFalse();
+        assertThat(reservedKeyword.failures()).singleElement()
+          .matches(f -> f.getProperty().equals("newMethodName"))
+          .matches(f -> f.getInvalidValue().equals("this"))
+          .matches(f -> f.getMessage().equals("should not be a Java Reserved Keyword."));
+    }
+
+    @Test
+    void validateReservedLiteral() {
+        Validated<Object> reservedLiteral = new ChangeMethodName("a.Clazz method(..)", "null", null, null).validate();
+        assertThat(reservedLiteral.isValid()).isFalse();
+        assertThat(reservedLiteral.failures()).singleElement()
+          .matches(f -> f.getProperty().equals("newMethodName"))
+          .matches(f -> f.getInvalidValue().equals("null"))
+          .matches(f -> f.getMessage().equals("should not be a Java Reserved Literal."));
+    }
+
+    @Test
+    void validatePattern() {
+        Validated<Object> invalidPattern = new ChangeMethodName("a.Clazz method(..)", "123", null, null).validate();
+        assertThat(invalidPattern.isValid()).isFalse();
+        assertThat(invalidPattern.failures()).singleElement()
+          .matches(f -> f.getProperty().equals("newMethodName"))
+          .matches(f -> f.getInvalidValue().equals("123"))
+          .matches(f -> f.getMessage().equals("should be a valid Java method name."));
     }
 }
