@@ -37,7 +37,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               @Override
               public J visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
                   if (method.getSimpleName().equals("test")) {
-                      var s = method.getBody().getStatements().get(0);
+                      var s = method.getBody().getStatements().getFirst();
                       return JavaTemplate.builder("test(#{any()})")
                         .contextSensitive()
                         .build()
@@ -45,14 +45,14 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                   }
                   return method;
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          }).withMaxCycles(1)),
           java(
             """
               class Test {
                   void test(int n) {
                       value();
                   }
-
+              
                   int value() {
                       return 0;
                   }
@@ -63,7 +63,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                   void test(int n) {
                       test(value());
                   }
-
+              
                   int value() {
                       return 0;
                   }
@@ -81,7 +81,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
                   if (method.getSimpleName().equals("test")) {
-                      var s = method.getBody().getStatements().get(0);
+                      var s = method.getBody().getStatements().getFirst();
                       return JavaTemplate.builder("test(#{anyArray()})")
                         .contextSensitive()
                         .build()
@@ -89,14 +89,14 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                   }
                   return method;
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          }).withMaxCycles(1)),
           java(
             """
               class Test {
                   void test(int[][] n) {
                       array();
                   }
-
+              
                   int[][] array() {
                       return new int[0][0];
                   }
@@ -107,7 +107,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                   void test(int[][] n) {
                       test(array());
                   }
-
+              
                   int[][] array() {
                       return new int[0][0];
                   }
@@ -125,13 +125,12 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
                   if (method.getSimpleName().equals("test")) {
                       return JavaTemplate.builder("#{} void test2() {}")
-                        .contextSensitive()
                         .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getLeadingAnnotations().get(0));
+                        .apply(getCursor(), method.getCoordinates().replace(), method.getLeadingAnnotations().getFirst());
                   }
                   return method;
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          })),
           java(
             """
               class Test {
@@ -141,7 +140,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               """,
             """
               class Test {
-                            
+              
                   @SuppressWarnings("ALL")
                   void test2() {
                   }
@@ -158,14 +157,14 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
-                  var s = method.getBody().getStatements().get(0);
+                  var s = method.getBody().getStatements().getFirst();
                   return JavaTemplate.builder("test(#{any(java.util.Collection)}, #{any(int)})")
                     .contextSensitive()
                     .build()
                     .apply(getCursor(), s.getCoordinates().replace(), s,
-                      ((J.VariableDeclarations) method.getParameters().get(1)).getVariables().get(0).getName());
+                      ((J.VariableDeclarations) method.getParameters().get(1)).getVariables().getFirst().getName());
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          }).withMaxCycles(1)),
           java(
             """
               import java.util.*;
@@ -194,13 +193,12 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
-                  var s = method.getBody().getStatements().get(0);
+                  var s = method.getBody().getStatements().getFirst();
                   return JavaTemplate.builder("if(true) #{}")
-                    .contextSensitive()
                     .build()
                     .apply(getCursor(), s.getCoordinates().replace(), method.getBody());
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          }).withMaxCycles(1)),
           java(
             """
               class Test {
@@ -229,7 +227,6 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               @Override
               public J visitArrayAccess(J.ArrayAccess arrayAccess, ExecutionContext executionContext) {
                   return JavaTemplate.builder("Some.method()")
-                    .contextSensitive()
                     .javaParser(JavaParser.fromJavaVersion()
                       .dependsOn(
                         """
@@ -244,7 +241,7 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                     .build()
                     .apply(getCursor(), arrayAccess.getCoordinates().replace());
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          })),
           java(
             """
               public class Test {
@@ -271,7 +268,6 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               public J visitBinary(J.Binary binary, ExecutionContext executionContext) {
                   if (binary.getOperator() == J.Binary.Type.Equal) {
                       return JavaTemplate.builder("Some.method()")
-                        .contextSensitive()
                         .javaParser(JavaParser.fromJavaVersion()
                           .dependsOn(
                             """
@@ -312,7 +308,6 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               public J visitLiteral(J.Literal literal, ExecutionContext executionContext) {
                   if (literal.getValue().equals("literal")) {
                       return JavaTemplate.builder("Some.method()")
-                        .contextSensitive()
                         .javaParser(JavaParser.fromJavaVersion()
                           .dependsOn(
                             """
@@ -352,9 +347,8 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitNewArray(J.NewArray newArray, ExecutionContext executionContext) {
-                  if (((J.Literal) newArray.getDimensions().get(0).getIndex()).getValue().equals(1)) {
+                  if (((J.Literal) newArray.getDimensions().getFirst().getIndex()).getValue().equals(1)) {
                       return JavaTemplate.builder("Some.method()")
-                        .contextSensitive()
                         .javaParser(JavaParser.fromJavaVersion()
                           .logCompilationWarningsAndErrors(true)
                           .dependsOn("""
@@ -399,12 +393,12 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
                     .build()
                     .apply(getCursor(), ternary.getCoordinates().replace(), ternary);
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          }).withMaxCycles(1)),
           java(
             """
               abstract class Test {
                   abstract String[] array();
-
+              
                   void test(boolean condition) {
                       Object any = condition ? array() : new String[]{"Hello!"};
                   }
@@ -412,10 +406,10 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               """,
             """
               import java.util.Arrays;
-                            
+              
               abstract class Test {
                   abstract String[] array();
-                  
+              
                   void test(boolean condition) {
                       Object any = Arrays.asList(condition ? array() : new String[]{"Hello!"});
                   }
@@ -426,17 +420,16 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
     }
 
     @Test
-    void testAnyIsGenericWithUnknownType() {
+    void anyIsGenericWithUnknownType() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                   return JavaTemplate.builder("System.out.println(#{any()})")
-                    .contextSensitive()
                     .build()
                     .apply(getCursor(), method.getCoordinates().replace(), method);
               }
-          })).cycles(1).expectedCyclesThatMakeChanges(1),
+          }).withMaxCycles(1)),
           java(
             """
               import java.util.Map;
@@ -456,5 +449,106 @@ class JavaTemplateSubstitutionsTest implements RewriteTest {
               """
           )
         );
+    }
+
+    @Test
+    void throwNewException() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitMethodInvocation(J.MethodInvocation methodInvocation, ExecutionContext executionContext) {
+                  return JavaTemplate.builder("throw new RuntimeException()")
+                    .build()
+                    .apply(getCursor(), methodInvocation.getCoordinates().replace());
+              }
+          })),
+          java(
+            """
+              public class Test {
+                  void test() {
+                      System.out.println("Hello");
+                  }
+              }
+              """,
+            """
+              public class Test {
+                  void test() {
+                      throw new RuntimeException();
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void methodArgumentsReplacementWhenMethodInvocationIsNotAStatement() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(BigDecimalSetScaleVisitor::new)),
+          java(
+            """
+              import java.math.BigDecimal;
+              
+              class A {
+                  static String s = String.valueOf("Value: " + BigDecimal.ONE.setScale(0, BigDecimal.ROUND_DOWN));
+              }
+              """,
+            """
+              import java.math.BigDecimal;
+              import java.math.RoundingMode;
+              
+              class A {
+                  static String s = String.valueOf("Value: " + BigDecimal.ONE.setScale(0, RoundingMode.DOWN));
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void methodArgumentsReplacementInAStatement() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(BigDecimalSetScaleVisitor::new)),
+          java(
+            """
+              import java.math.BigDecimal;
+              
+              class A {
+                  public static void b() {
+                      BigDecimal.ONE.setScale(0, BigDecimal.ROUND_DOWN);
+                  }
+              }
+              """,
+            """
+              import java.math.BigDecimal;
+              import java.math.RoundingMode;
+              
+              class A {
+                  public static void b() {
+                      BigDecimal.ONE.setScale(0, RoundingMode.DOWN);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    private static class BigDecimalSetScaleVisitor extends JavaVisitor<ExecutionContext> {
+        // Modelled after org.openrewrite.staticanalysis.BigDecimalRoundingConstantsToEnums.BIG_DECIMAL_SET_SCALE
+        @Override
+        public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
+            J.MethodInvocation m = (J.MethodInvocation) super.visitMethodInvocation(method, ctx);
+            if ("setScale".equals(m.getName().getSimpleName())) {
+                J.FieldAccess secondArgument = (J.FieldAccess) m.getArguments().get(1);
+                if (secondArgument.getName().getSimpleName().equals("ROUND_DOWN")) {
+                    maybeAddImport("java.math.RoundingMode");
+                    return JavaTemplate.builder("#{any(int)}, #{}")
+                      .imports("java.math.RoundingMode")
+                      .build()
+                      .apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().getFirst(), "RoundingMode.DOWN");
+                }
+            }
+            return m;
+        }
     }
 }
